test/typechecker/pass/dependent_sig.fu
sig Equal {
    type T;
    val is_equal : fun (T, T) -> bool;
}
