test/typechecker/fail/hidden_mod_members.fu
mod Foo {
    type T = i32;
}
fun f(x: Foo.T) -> Foo.T = x;
